# challenges

./: .gitignore  README.md
hse-graph-part/runs/: parhip_master_n_4_k_4_ecomesh  parhip_master_n_4_k_4_fastmesh  parhip_master_n_6_k_4_ecomesh  parhip_master_n_6_k_4_ecomesh_2  parhip_master_n_6_k_4_fastmesh  parhip_updated_n_4_k_4_ecomesh  parhip_updated_n_6_k_4_ecomesh  parhip_updated_n_6_k_4_ecomesh_new  parhip_updated_n_6_k_4_fastmesh  parhip_updated_n_6_k_4_fastmesh_new
hse-graph-part/runs/final/: Untitled.ipynb  (+120 more)
hse-graph-part/scripts/: .superblue_hgr_to_graph.sh.swp  hgr_to_graph  hgr_to_graph.cpp  hgr_to_graph.py  run_parhip.sh  superblue_hgr_to_graph.sh  superblue_run_parhip.sh
huawei-balanced-regions/input/: 1  2  3  4  5
huawei-balanced-regions/lib/: common.cpp  score.cpp
huawei-balanced-regions/markysha/: main.cpp
huawei-balanced-regions/scripts/: run.sh
huawei-communication-routing/: .clang-tidy  CMakeLists.txt
huawei-communication-routing/input/: 1.txt
huawei-communication-routing/last/main.cpp/: ans_1  main.cpp  source.tgz
huawei-communication-routing/scripts/: run.sh
huawei-communication-routing/src/: common.hpp  main.cpp  score.cpp
huawei-fixing-the-cloud/input/: 1  2  3
huawei-fixing-the-cloud/lib/: common.cpp  score  score.cpp
huawei-fixing-the-cloud/markysha/: main.cpp
huawei-graph-mining/: README
huawei-graph-mining/input/: 0.graph
huawei-graph-mining/lib/: common.cpp  score.cpp
huawei-graph-mining/markysha/: enhancer.cpp  fast.cpp  main.cpp  multilevel.cpp
huawei-graph-mining/scripts/: run.sh
(+265 files in other folders)
